fixed banner width

--- a/Client-app/src/app/job-front-box/box.html
+++ b/Client-app/src/app/job-front-box/box.html
@@ -1,12 +1,14 @@
 <div class="pt-5">
-    <div class="dark-bg py-md-5 py-2 mx-md-0 mx-1 roundIt row">
-        <div class="col-md-10 col-12 row center">
-            <div class="col-md-8 col-12">
-                <div class="white-color h3 py-3 pr-md-5 pr-0">Best career development tools to get you hired</div>
-                <p class="white-color">Best carreer Development Tools to get you on exact route, no matter where you want to go.</p>
-            </div>
-            <div class="col-md-4 col-12 p-md-5 p-3 my-auto text-center">
-                <button mat-button class="btnPrime" [routerLink]="['/Career-development-tools']">Learn More</button>
+    <div class="dark-bg py-md-5 py-2 roundIt">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-12">
+                    <div class="white-color h3 py-3 pr-md-5 pr-0">Best career development tools to get you hired</div>
+                    <p class="white-color">Best carreer Development Tools to get you on exact route, no matter where you want to go.</p>
+                </div>
+                <div class="col-md-4 col-12 py-md-5 px-md-0 p-3 my-auto text-center">
+                    <button mat-button class="btnPrime" [routerLink]="['/Career-development-tools']">Learn More</button>
+                </div>
             </div>
         </div>
     </div>
