added json-ld data in jobs pages

--- a/Client-app/src/app/job-list/job-list.component.html
+++ b/Client-app/src/app/job-list/job-list.component.html
@@ -1,3 +1,7 @@
+<ng-template ngFor let-schema [ngForOf]="schemaData">
+    <ngx-json-ld [json]="schema"></ngx-json-ld>
+</ng-template>
+
 <div class="light-bg">
     <div class="container">
         <app-job-list-filter *ngIf="loaded" [all]="data" [toggleView]="toggleView"></app-job-list-filter>
