fixed single job page

--- a/Client-app/src/app/job-page/job-page.component.html
+++ b/Client-app/src/app/job-page/job-page.component.html
@@ -1,11 +1,11 @@
 <div *ngIf="isNotEmpty()">
     <ngx-json-ld [json]="schema"></ngx-json-ld>
-    <div *ngIf="jobTitle.length && !check" class="row bg-white makeItRound w-100 my-md-0 my-3 center" #t1>
+    <div *ngIf="!check" class="row bg-white makeItRound w-100 my-md-0 my-3 center" #t1>
         <div class="col-12 w-100 mx-2 mt-2">
             <div class="pb-3 mb-2 row">
                 <div class="col-md-8 col-sm-12">
                     <h2 class="h5 pt-4 hell pointer" style="font-weight: 600;" [ngClass]="{'text-center':isMobile}"
-                        [routerLink]="['/Job',jobDetails.Position,jobDetails.id]">{{jobDetails.Position}}</h2>
+                        [routerLink]="['/Job',slug]">{{jobDetails.Position}}</h2>
                     <h4 *ngIf="jobDetails.Location=='Not Specified'" class="h6 text-muted font-weight-normal"
                         [ngClass]="{'text-center':isMobile}">{{jobDetails.Country}} | {{jobDetails.AdvertiserName}}</h4>
                     <h4 *ngIf="jobDetails.Location!='Not Specified'" class="h6 text-muted font-weight-normal"
@@ -54,7 +54,7 @@
             </div>
         </div>
     </div>
-    <div *ngIf="jobTitle!='find-job' && check" class="w-100"
+    <div *ngIf="check" class="w-100"
         [ngClass]="{'container':!isMobile,'container-fluid':isMobile,'mt-5':isMobile}" #t1>
         <div class="row mt-2">
             <ngx-json-ld [json]="schema"></ngx-json-ld>
@@ -62,7 +62,7 @@
                 <div class="col-12 pb-3 mb-2 row">
                     <div class="col-md-8 col-sm-12">
                         <h2 class="h5 pt-4" style="font-weight: 600;" [ngClass]="{'text-center':isMobile}"
-                            [routerLink]="['/Job',jobDetails.Position,jobDetails.id]">{{jobDetails.Position}}</h2>
+                            [routerLink]="['/Job',slug]">{{jobDetails.Position}}</h2>
                         <h4 *ngIf="jobDetails.Location=='Not Specified'" class="h6 text-muted font-weight-normal"
                             [ngClass]="{'text-center':isMobile}">{{jobDetails.Country}} | {{jobDetails.AdvertiserName}}
                         </h4>
@@ -122,7 +122,7 @@
                         People also viewed!
                     </div>
                     <div class="py-2" *ngFor="let k of target_feature">
-                        <div class="text-dark hell" [routerLink]="['/Job',k.Position,jobDetails.id]">{{k.Position}}
+                        <div class="text-dark hell" [routerLink]="['/Job',slug]">{{k.Position}}
                         </div>
                         <div *ngIf="k.Location==='Not Specified'" class="h6 text-muted font-weight-normal">{{k.Country}}
                             | {{k.AdvertiserName}}</div>
