--- a/Client-app/src/app/job-footer/job-footer.component.html
+++ b/Client-app/src/app/job-footer/job-footer.component.html
@@ -129,7 +129,7 @@
     <!-- Footer Links -->
     <hr *ngIf="isRoot" style="margin: 0;padding: 0;"/>
     <!-- Copyright -->
-    <div class="text-center py-3 text-muted" *ngIf="isRoot">© 2021 Copyright:
+    <div class="text-center py-3 text-muted" *ngIf="isRoot">© {{currYear}} Copyright:
       <span class="text-dark"> workire.com. All Rights Reserved. </span>
       <a href="/disclaimer" class="text-muted"><u>Disclaimer</u></a>
     </div>
